--- a/project.html
+++ b/project.html
@@ -8,11 +8,11 @@
 <body>
     <h1>projects</h1>
     <div>
-        <a href=""></a><br>
-        <a href=""></a><br>
-        <a href=""></a><br>
-        <a href=""></a><br>
-        <a href=""></a><br>
+        <a href="https://piyushchauhan24.github.io/tip_calculater/">Tip calculator</a><br>
+        <a href="https://piyushchauhan24.github.io/BMI/">Body mass index</a><br>
+        <a href="https://piyushchauhan24.github.io/analog_clock/">Analog clock</a><br>
+        <a href="https://piyushchauhan24.github.io/gradecalc/">Grade calculator</a><br>
+        <a href="https://piyushchauhan24.github.io/mouse_move/">Mouse moving effect</a><br>
         <a href=""></a><br>
         
 
