--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
         <a href="https://piyushchauhan24.github.io/analog_clock/">Analog clock</a><br>
         <a href="https://piyushchauhan24.github.io/gradecalc/">Grade calculator</a><br>
         <a href="https://piyushchauhan24.github.io/mouse_move/">Mouse moving effect</a><br>
-        <a href=""></a><br>
+        <a href=" https://piyushchauhan24.github.io/navigation_bar_on_scroll/">navigation_bar_scroll</a><br>
         
 
     </div>
