--- a/project.html
+++ b/project.html
@@ -14,6 +14,9 @@
         <a href="https://piyushchauhan24.github.io/gradecalc/">Grade calculator</a><br>
         <a href="https://piyushchauhan24.github.io/mouse_move/">Mouse moving effect</a><br>
         <a href=" https://piyushchauhan24.github.io/navigation_bar_on_scroll/">navigation_bar_scroll</a><br>
+        <a href="https://piyushchauhan24.github.io/Payrolemanagement/">payrolemanagement</a><br>
+         <a href=""></a><br>
+         <a href=""></a><br>
         
 
     </div>
