--- a/project.html
+++ b/project.html
@@ -15,8 +15,8 @@
         <a href="https://piyushchauhan24.github.io/mouse_move/">Mouse moving effect</a><br>
         <a href=" https://piyushchauhan24.github.io/navigation_bar_on_scroll/">navigation_bar_scroll</a><br>
         <a href="https://piyushchauhan24.github.io/Payrolemanagement/">payrolemanagement</a><br>
-         <a href=""></a><br>
-         <a href=""></a><br>
+         <a href="https://piyushchauhan24.github.io/sliding-login-and-signup-form/">sliding-login-and-signup-form</a><br>
+         <a href="https://piyushchauhan24.github.io/AI-image-generator/">AI-image-generator</a><br>
         
 
     </div>
