--- a/in.html
+++ b/in.html
@@ -37,7 +37,7 @@
             It take me 4 months to become a fine developer 
            </li>
            <li>
-            From dehradun which is situated  in the <br>lap of mountain. 
+            From Dehradun which is situated  in the <br>lap of mountain. 
             which is always be attractive for tourist
            </li>
           </ul>
@@ -47,7 +47,7 @@
           <h1 style="text-align: center;">Education</h1>
           <p><ul>
            <li>
-            I have done my 12<sup>th</sup> from E.M.R.S Kalsi dehradun.
+            I have done my 12<sup>th</sup> from E.M.R.S Kalsi Dehradun.
              which is near the yamuna river
            </li>
            <li>
