--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     </div>
     
         <div  id="circle1" >
-            <a class="link" href="in.html" > resume</a>
+            <a class="link" href="in.html" > Resume</a>
          </div>
         <div id="circle2">
-            <a class="link" href="project.html" > project</a>
+            <a class="link" href="project.html" > Project</a>
         </div>
         <div id="circle3">
-            <a class="link" href="https://www.google.com/maps/place/Lokhandi+Snow+Point/@30.7574294,77.8057721,504m/data=!3m1!1e3!4m6!3m5!1s0x390f49e6f4f66453:0x78c5438ef2eb9edc!8m2!3d30.7573693!4d77.8101178!16s%2Fg%2F11j_rgx01z?authuser=0&entry=ttu" >home</a>
+            <a class="link" href="https://www.google.com/maps/place/Lokhandi+Snow+Point/@30.7574294,77.8057721,504m/data=!3m1!1e3!4m6!3m5!1s0x390f49e6f4f66453:0x78c5438ef2eb9edc!8m2!3d30.7573693!4d77.8101178!16s%2Fg%2F11j_rgx01z?authuser=0&entry=ttu" >Home</a>
         </div>
     
 </body>
