--- a/project.html
+++ b/project.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
-<html >
+<html lang="en">
 <head>
-   
-   
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="style_pro.css">
 </head>
 <body>
    
     <div id="hello">Hello I am Piyush</div>
     <h1 id="h1">these all are my project</h1>
-    <div>
-        
-        
-        <a class="link" href="https://piyushchauhan24.github.io/tip_calculater/">Tip calculator   </a><br>
-        <a class="link" href="https://piyushchauhan24.github.io/BMI/">Body mass index</a><br>
-        <a class="link" href="https://piyushchauhan24.github.io/analog_clock/">Analog clock</a><br>
-        <a class="link" href="https://piyushchauhan24.github.io/gradecalc/">Grade calculator</a><br>
-        <a class="link" href="https://piyushchauhan24.github.io/mouse_move/">Mouse moving effect</a><br>
-        <a class="link" href=" https://piyushchauhan24.github.io/navigation_bar_on_scroll/">navigation_bar_scroll</a><br>
-        <a  class="link"href="https://piyushchauhan24.github.io/Payrolemanagement/">payrolemanagement</a><br>
-         <a class="link" href="https://piyushchauhan24.github.io/sliding-login-and-signup-form/">sliding-login-and-signup-form</a><br>
-         <a class="link" href="https://piyushchauhan24.github.io/AI-image-generator/">AI-image-generator</a><br>
+    <div id="box1">
+        <ul>
+        <li> <a class="link" href="https://piyushchauhan24.github.io/tip_calculater/">Tip calculator   </a></li>
+        <li>              <a class="link" href="https://piyushchauhan24.github.io/mouse_move/">Mouse moving effect</a><br>
 
+        </li>
+        <li>        <a class="link" href="https://piyushchauhan24.github.io/BMI/">Body mass index</a><br>
+        </li>
+        <li>        <a class="link" href="https://piyushchauhan24.github.io/analog_clock/">Analog clock</a><br>
+        </li>
+        <li>        <a class="link" href="https://piyushchauhan24.github.io/gradecalc/">Grade calculator</a><br>
+        </li>
+       </ul>
+    </div>
+    <div id="box2">
+        <ul>
+            <li>        <a class="link" href=" https://piyushchauhan24.github.io/navigation_bar_on_scroll/">navigation_bar_scroll</a><br>
+            </li>
+            <li>            <a  class="link"href="https://piyushchauhan24.github.io/Payrolemanagement/">payrolemanagement</a><br>
+            </li>
+            <li>         <a class="link" href="https://piyushchauhan24.github.io/sliding-login-and-signup-form/">sliding-login-and-signup-form</a><br>
+            </li>
+            <li>         <a class="link" href="https://piyushchauhan24.github.io/AI-image-generator/">AI-image-generator</a><br>
+            </li>
+        </ul>    
     </div>
 </body>
 </html>
