--- a/project.html
+++ b/project.html
@@ -22,6 +22,9 @@
         </li>
         <li>        <a class="link" href="https://piyushchauhan24.github.io/gradecalc/">Grade calculator</a><br>
         </li>
+            <li>
+                <a class="link" href="https://piyushchauhan24.github.io/blog/">Simple Blog Platform</a><br>
+            </li>
        </ul>
     </div>
     <div id="box2">
