--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div id="box1">
-       <img id="photo"  src="photo.avif" >
+       <img id="photo"  src="photo.jpg" >
     </div>
    
     <div id="box2">
